# Replay

./: .gitignore  LICENSE  README.md  run_sim_gui.py  visualize_summary.py
benchmark/: 3d_runtime_surface.csv  airport.csv  airport_trimmed.csv  benchmark.py  benchmark_all.bat  benchmark_parallelism.py  benchmark_with_trials.py  cities.csv  dense.csv  grid_benchmark.py  parallelism_benchmark.csv  run_sim_gui.py  test.py  villages.csv  visualize_grid.py  visualize_grid_3.py  visualize_improved.py  visualize_improved_with_trials.py  visualize_parallelism.py
benchmark/plots/: airport_runtime_comparison.pgf  cities_runtime_comparison.pgf  dense_runtime_comparison.pgf  parallelism_benchmark.pgf  runtime_block_plot.pgf  villages_runtime_comparison.pgf
compare_with_differential_equation/: compartmental_model.py  generate_network.py  peek.py  seir_output.csv  sir_output.csv  test.bat  visualize_analytical_vs_tool.py
contactgraphgen/: contactgraphgen.py  example.txt  graph.txt
generate_networks/: CMakeLists.txt  graph_generator.c  graph_generator.h  main.c  readme.txt
misc/: person.py
replay/scaling/: contact_network  generate_networks.sh  replay  strong_scaling_benchmark.py  weak_scaling_benchmark.py  weak_scaling_benchmark_targeted.py
replay/scaling/results/: strong_scaling_results.csv  visualize_weak_scaling.py  (+3 more)
rollernet_example/: epihiper_config_seir.json  format.py  format_only_replay.py  minimal_preprocessing.py  ndlib_SIR_multiprocessed.py  preprocessing.py  run_tacoma_sim.py
screenshot/: simulation_runtime_bargraph.py
tool/: CMakeLists.txt  gpu_cpu_temporal_sim.cu  temporal_contact_matrix.c  temporal_contact_matrix.h  vcpkg.json
tool/backup/: gpu_cpu_temporal_sim - old.cu  gpu_cpu_temporal_sim_NO_EIGEN.cu  temporal_contact_matrix_old (2).c  temporal_contact_matrix_old.c
tool/ncls/ncls/src/: cgraph.h  default.h  fintervaldb.c  fintervaldb.h  intervaldb.c  intervaldb.h  intervaldb32.c  intervaldb32.h  utarray.h
